1.1
   - tincd kernel interface code imported, more supported platforms
   - portability workarounds, especially for unfriendly freebsd
   - very minor bugfixes
   - warnings when choosing insecure ciphers/hashes
   - reduced default hmac length to 12.
   - cvs now contains configure, Makefile.in and other generated files.

1.0
   - tweaked various timeouts to help very slow (486) class
     machines or nets with many hosts.
   - tweaked rate-limiting to be more forgiving for hosts
     connecting through routers (not a fix)
