@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.13
+.\" Automatically generated by Pod::Man v1.34, Pod::Parser v1.13
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "VPE.PROTOCOL 7"
-.TH VPE.PROTOCOL 7 "2003-04-15" "0.9" "Virtual Private Ethernet"
+.TH VPE.PROTOCOL 7 "2003-10-14" "1.2" "Virtual Private Ethernet"
 .SH "The VPE Protocol"
 .IX Header "The VPE Protocol"
 .Sh "Anatomy of a \s-1VPN\s0 packet"
@@ -144,9 +144,9 @@ protocols, be it rawip or tcp.
 \& +------+------+--------+------+
 .Ve
 .PP
-The \s-1HMAC\s0 field is present in all packets, even if not used (e.g. in
-authentification packets), in which case it is set to all zeroes. The
-checksum itself is over the \s-1TYPE\s0, \s-1SRCDST\s0 and \s-1DATA\s0 fields in all cases.
+The \s-1HMAC\s0 field is present in all packets, even if not used (e.g. in auth
+request packets), in which case it is set to all zeroes. The checksum
+itself is over the \s-1TYPE\s0, \s-1SRCDST\s0 and \s-1DATA\s0 fields in all cases.
 .PP
 The \s-1TYPE\s0 field is a single byte and determines the purpose of the packet
 (e.g. \s-1RESET\s0, \s-1COMPRESSED/UNCOMPRESSED\s0 \s-1DATA\s0, \s-1PING\s0, \s-1AUTH\s0 \s-1REQUEST/RESPONSE\s0,
@@ -159,8 +159,8 @@ are rare or tolerable and most connections are on demand, larger networks
 are possible.
 .PP
 The \s-1DATA\s0 portion differs between each packet type, naturally, and is the
-only part that can be encrypted encrypted. Data packets contain more
-fields, as shown:
+only part that can be encrypted. Data packets contain more fields, as
+shown:
 .PP
 .Vb 3
 \& +------+------+--------+------+-------+------+
@@ -168,30 +168,40 @@ fields, as shown:
 \& +------+------+--------+------+-------+------+
 .Ve
 .PP
-\&\s-1RAND\s0 is a sequence of fully random bytes, used to increase the entropy of the data
-for encryption purposes.
+\&\s-1RAND\s0 is a sequence of fully random bytes, used to increase the entropy of
+the data for encryption purposes.
 .PP
 \&\s-1SEQNO\s0 is a 32\-bit sequence number. It is negotiated at every connection
-initialization and starts at some random value.
+initialization and starts at some random 31 bit value. \s-1VPE\s0 currently uses
+a sliding window of 512 packets to detect reordering, duplication and
+reply attacks.
 .Sh "The authentification protocol"
 .IX Subsection "The authentification protocol"
 Before hosts can exchange packets, they need to establish authenticity of
 the other side and a key. Every host has a private \s-1RSA\s0 key and the public
 \&\s-1RSA\s0 keys of all other hosts.
 .PP
-A host establishes a simplex connection by sending the other host a \s-1RSA\s0
-challenge containing the random digest and encryption keys (different)
-to use when sending packets, plus more randomness plus some \s-1PKCS1_OAEP\s0
-padding plus a random 16 byte id. The destination host will respond by
-replying with an (unencrypted) \s-1RIPEMD160\s0 hash of the decrypted data, which
+A host establishes a simplex connection by sending the other host a
+\&\s-1RSA\s0 encrypted challenge containing a random challenge (consisting of
+the encryption key to use when sending packets, more random data and
+\&\s-1PKCS1_OAEP\s0 padding) and a random 16 byte \*(L"challenge\-id\*(R" (used to detect
+duplicate auth packets). The destination host will respond by replying
+with an (unencrypted) \s-1RIPEMD160\s0 hash of the decrypted challenge, which
 will authentify that host. The destination host will also set the outgoing
 encryption parameters as given in the packet.
 .PP
 When the source host receives a correct auth reply (by verifying the
-hash and the id, which will expire after 20 seconds). it will start to
-accept data packets from the destination host. The protocol is completely
-symmetric, so to be able to send packets the destination host must send a
-challenge in the exact same way as already described.
+hash and the id, which will expire after 120 seconds), it will start to
+accept data packets from the destination host.
+.PP
+This means that a host can only initate a simplex connection, telling the
+other side the key it has to use when it sends packets. The challenge
+reply is only used to set the current \s-1IP\s0 address and protocol parameters.
+.PP
+The protocol here is completely symmetric, so to be able to send packets
+the destination host must send a challenge in the exact same way as
+already described (so, in essence, two simplex connections are created per
+host pair).
 .Sh "Retrying"
 .IX Subsection "Retrying"
 When there is no response to an auth request, the host will send auth
