@@ -1,5 +1,7 @@
 1.1
    - tincd kernel interface code imported, more supported platforms
+     (native/linux (2.4), tincd/linux (2.2 and 2.4), tincd/freebsd,
+     native/cygwin).
    - portability workarounds, especially for unfriendly freebsd
    - very minor bugfixes
    - warnings when choosing insecure ciphers/hashes
